[INJIWEB-1541] refactor - extract duplicate blocks
Detailed changes
- extract functions for duplicate blocks
- optimize imports
- remove redundant default params specified
- remove redundant equals check in test verify or mock calls

Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>